Fix hover state border jumpiness

--- a/elements/pfe-tabs/src/pfe-tab.scss
+++ b/elements/pfe-tabs/src/pfe-tab.scss
@@ -204,29 +204,29 @@ $LOCAL-VARIABLES: map-deep-merge($LOCAL-VARIABLES, $backwards-compatibility);
   }
 
   :host([vertical][pfe-variant="earth"][aria-selected="false"]:first-of-type) {
-    border-top: pfe-var(ui--border-width) pfe-var(ui--border-style) transparent;
+    border-top-color: transparent;
     border-left: pfe-local(BorderWidth) pfe-var(ui--border-style) transparent;
   }
 
   :host([vertical][pfe-variant="earth"][aria-selected="false"]) {
     border-right: 0;
     border-bottom: 0;
-    border-left: #{pfe-local(BorderWidth)} #{pfe-var(ui--border-style)} transparent;
+    border-left-color: transparent;
   }
 
   :host([vertical][pfe-variant="earth"][aria-selected="false"]:hover) {
-    border-left: #{pfe-local(BorderWidth)} #{pfe-var(ui--border-style)} #{pfe-var(surface--border)};
-    border-top: #{pfe-var(ui--border-width)} #{pfe-var(ui--border-style)} #{pfe-var(surface--border)};
+    border-left-color: #{pfe-var(surface--border)};
+    border-top-color: #{pfe-var(surface--border)};
   }
 
   :host([vertical][pfe-variant="earth"][aria-selected="false"]:first-of-type:hover) {
-    border-top: #{pfe-var(ui--border-style)} #{pfe-var(ui--border-style)} transparent;
-    border-left: #{pfe-local(BorderWidth)} #{pfe-var(ui--border-style)} #{pfe-var(surface--border)};
+    border-left-color: #{pfe-var(surface--border)};
+    border-top-color: transparent;
   }
 
 
   :host([vertical][pfe-variant="earth"][aria-selected="true"]) {
-    border-top: solid pfe-var(ui--border-width) pfe-var(surface--border);
+    border-top-color: pfe-var(surface--border);
     border-left-color: pfe-local(BorderColor);
     border-left-width: pfe-local(BorderWidth);
     border-right-color: transparent;
@@ -255,6 +255,7 @@ $LOCAL-VARIABLES: map-deep-merge($LOCAL-VARIABLES, $backwards-compatibility);
     background-color: pfe-var(surface--darker);
 
     @include browser-query(ie11) {
+      background-color: pfe-var(surface--lightest) !important;
       color: pfe-fetch(text) !important;
     }
   }
